Correzzione di alcuni bug visti da JUnit 5.0